recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: identifier expected but ')' found.
    gauche(60.);
              ^Koch:18: error: identifier expected but ')' found.
    gauche(120.);
               ^Koch:20: error: identifier expected but ')' found.
    gauche(60.);
              ^